Add Items Feature
NEXT: Delete Items

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -9,6 +9,7 @@
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
       crossorigin="anonymous"
     ></script>
+    <script src="/assets/todo-list.js"></script>
     <link rel="stylesheet" href="/assets/styles.css" />
     <title>Todo List</title>
   </head>
